# aws-basics-template-rust

./: .gitignore  Cargo.toml  Makefile  README.md
examples/: 200.json
infrastucture/: lambda.tf
lambdas/lambda-1/: Cargo.toml
lambdas/lambda-1/src/: main.rs
